--- a/projects/client/src/app/components/header/header.component.html
+++ b/projects/client/src/app/components/header/header.component.html
@@ -1,29 +1,38 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/dashboard">Around Noon</a>
+    <a class="navbar-brand" routerLink="/dashboard">OPTIROUTE</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
+          <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">
+            <i class="bi bi-speedometer2"></i> Dashboard
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/driver-forms" routerLinkActive="active">My Forms</a>
+          <a class="nav-link" routerLink="/driver-forms" routerLinkActive="active">
+            <i class="bi bi-clipboard-check"></i> My Forms
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/store-library" routerLinkActive="active">
+            <i class="bi bi-shop"></i> Stores
+          </a>
         </li>
       </ul>
       
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Admin
+            <i class="bi bi-gear"></i> Admin
           </a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="adminDropdown">
-            <li><a class="dropdown-item" routerLink="/admin/forms">Forms</a></li>
-            <li><a class="dropdown-item" routerLink="/admin/form-templates">Form Templates</a></li>
+            <li><a class="dropdown-item" routerLink="/admin/forms"><i class="bi bi-list-check"></i> Forms</a></li>
+            <li><a class="dropdown-item" routerLink="/admin/form-templates"><i class="bi bi-file-earmark-text"></i> Form Templates</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Logout</a></li>
+            <li><a class="dropdown-item" href="#"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
           </ul>
         </li>
       </ul>
